# wal-to-win-script

./: Cargo.toml  LICENSE  README.md
src/: main.rs
