[package]
name = "ColorScript"
version = "0.1.0"
authors = ["gremious <gremious@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
