[package]
name = "wal-to-win-script"
version = "1.0.0"
authors = ["gremious <gremious@protonmail.com>"]
edition = "2018"

[[bin]]
name = "wtws"
path = "src/wtws.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
log = "0.4"
simple_logger = "1.11.0"
